--- a/roside_single.conf
+++ b/roside_single.conf
@@ -15,16 +15,13 @@ Proxy = custom,104.11,8338,aes-256-cfb,fuckuwal,https://raw.githubusercontent.co
 
 
 [Rule]
-
-IP-CIDR,221.179.140.0/24,REJECT
-
 # Top .cn sites
 DOMAIN-SUFFIX,cn,DIRECT
 
 DOMAIN-KEYWORD,blah,DIRECT
 DOMAIN-KEYWORD,someok,DIRECT
 DOMAIN-KEYWORD,racheltalk,DIRECT
-
+DOMAIN-KEYWORD,carrefour,DIRECT
 DOMAIN-KEYWORD,360buy,DIRECT
 DOMAIN-KEYWORD,alipay,DIRECT
 DOMAIN-KEYWORD,baidu,DIRECT
