--- a/roside_single.conf
+++ b/roside_single.conf
@@ -11,7 +11,7 @@ dns-server = 119.29.29.29,223.6.6.6,223.5.5.5,114.114.114.114,114.114.115.115
 # Proxy = http,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy = https,$IP,$PORT,$USERNAME,$PASSWORD
 # Proxy = socks,$IP,$PORT
-Proxy = custom,jp.roside.com,8338,aes-256-cfb,fuckuwal,https://raw.githubusercontent.com/avichen/SSEncrypt/master/SSEncrypt.module
+Proxy = custom,a.com,8338,aes-256-cfb,abc,https://raw.githubusercontent.com/avichen/SSEncrypt/master/SSEncrypt.module
 
 
 [Rule]
